kubernetes/bitcoin/statefulset.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: bitcoin-core
spec:
  replicas: 1
  serviceName: bitcoin-core
  template:
    spec:
      nodeSelector:
        kubernetes.io/arch: amd64
      securityContext:
        runAsUser: 999
        runAsGroup: 999
        fsGroup: 999
        fsGroupChangePolicy: "OnRootMismatch"
        runAsNonRoot: true
      containers:
      - name: bitcoin-core
        image: bitcoin-core
        imagePullPolicy: Always
        volumeMounts:
        - name: data
          mountPath: /data
        resources:
          requests:
            cpu: 700m
            memory: 600Mi
          limits:
            cpu: 700m
            memory: 600Mi
  volumeClaimTemplates:
  - metadata:
      name: data
    spec:
      accessModes: [ "ReadWriteMany" ]
      storageClassName: "nfs-client"
      resources:
        requests:
          storage: 500Gi
